itemlocacao update
