# src/modulo-locacao/comanda/entities/comanda.entity.ts
@@ -2,7 +2,7 @@ import { Locacao } from "../../locacao/entities/locacao.entity";
 import { Produto } from "../../../modulo-produto/produto/entities/produto.entity";
 import { Motel } from "../../../modulo-motel/motel/entities/motel.entity";
 import { Column, CreateDateColumn, DeleteDateColumn, Entity, JoinColumn, ManyToOne, OneToMany, PrimaryGeneratedColumn, RelationId } from "typeorm";
-import { ItemComanda } from "src/itemcomanda/entities/itemcomanda.entity";
+import { ItemLocacao } from "src/itemlocacao/entities/itemlocacao.entity";
 
 @Entity({ name: 'comanda' })
 export class Comanda {
@@ -45,7 +45,7 @@ export class Comanda {
    @DeleteDateColumn({ type:'timestamp', name:'comanda_exclusao', nullable: true })
    comanda_exclusao: Date;
 
-   @OneToMany(() => ItemComanda, (item) => item.comanda)
-   itens: ItemComanda[];
+   @OneToMany(() => ItemLocacao, (item) => item.comanda)
+   itens: ItemLocacao[];
 
 }
